testsuite/tests/parser/should_fail/T8430.lhs
This should not compile:

\end{code}

> module T8430 where
> main = putStr "a"
